--- a/.swiftpm/xcode/xcshareddata/xcschemes/swift-lambda-starter.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/swift-lambda-starter.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "swift-lambda-starter-tests"
+               BuildableName = "swift-lambda-starter-tests"
+               BlueprintName = "swift-lambda-starter-tests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
